Compiler/fasto/tests/scan_neg5.err
Type error: Scan: incompatible function type of plus: bool * bool -> int at line 3, column 11