Compiler/fasto/tests/scan_neg5.fo
fun int plus (bool a, bool b) = 1 + 1
fun int main () = 
  let a = scan (plus, true, {false, true, false}) in 0